--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   http: ^1.2.1
   geolocator: ^12.0.0
   flutter_map: ^6.1.0
+  latlong2: ^0.9.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
