--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,20 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
 
+  # State management
+  provider: ^6.1.0
+
+  # Design & Typography
+  google_fonts: ^6.1.0
+
+  # Animations
+  animations: ^2.0.11
+  flutter_animate: ^4.5.0
+  flutter_staggered_animations: ^1.1.1
+
+  # UI Components
+  shimmer: ^3.0.0
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
